# crazyflie-firmware

./: .gitignore  .python-version  Makefile  pyproject.toml
app_api/: Kbuild
configs/: sitl_defconfig
examples/app_uart/: README.md  app-config  uart_readout.py
examples/app_uart/src/: uart.c
examples/swarmalator_swarm/: Makefile  cload-all.sh
examples/swarmalator_swarm/GUI/: common.py  dash_visualizer.py  data_signals.py  drawing_widget.py  drone_visualization.py  drone_widget.py  experiment_recorder.py  external_command_client.py  sniffer_interface.py  test.py  tower.py  towergui.py  vispy_towergui.py
examples/swarmalator_swarm/src/: pilot.c  sniffer.c
examples/swarmalator_swarm/src/common_files/: Kbuild  choose_app.h  common.c  common.h  led_ring.c  led_ring.h  movement.c  movement.h  p2p_interface.c  p2p_interface.h  param_log_interface.c  param_log_interface.h  positions.c  positions.h  settings.h  swarmalator.c  swarmalator.h  vec.c  vec.h
scripts/kconfig/: merge_config.sh
sitl_make/: CMakeLists.txt
src/: Kbuild
src/config/: section_compact.h
src/hal/src/: Kbuild  socketlink.c  storage.c
src/init/: Kbuild
src/modules/interface/: eventtrigger.h  log.h  param.h  static_mem.h
src/modules/src/: Kbuild  Kconfig  eventtrigger.c  log.c  param_logic.c  param_task.c  stabilizer.c  system.c
src/modules/src/estimator/: estimator_kalman.c
src/modules/src/kalman_core/: Kbuild
src/platform/src/: Kbuild
src/utils/interface/: cf_math.h  cfassert.h
src/utils/src/: Kbuild  cfassert.c
